--- a/index.html
+++ b/index.html
@@ -182,16 +182,16 @@
       <div id="slides1">
 
 
-        <div class="tags"><i class="fas fa-home"></i>&nbsp;&nbsp;read estate</div>
+        <div class="tags"><i class="fas fa-home"></i>&nbsp;&nbsp;<div>read</div> <div>estate</div></div>
         <div class="tags"><i class="fas fa-shopping-bag"></i>&nbsp;&nbsp;ecommerce</div>
-        <div class="tags"><i class="fas fa-cloud-upload-alt"></i>&nbsp;&nbsp;cloud computing</div>
+        <div class="tags"><i class="fas fa-cloud-upload-alt"></i>&nbsp;&nbsp;<div>cloud</div> <div>computing</div></div>
         <div class="tags"><i class="fas fa-code"></i>&nbsp;&nbsp;programming</div>
-        <div class="tags"><i class="fas fa-gamepad"></i>&nbsp;&nbsp;game development</div>
-        <div class="tags"><i class="fas fa-robot"></i>&nbsp;&nbsp;machine learning</div>
-        <div class="tags"><i class="fas fa-chart-pie"></i>&nbsp;&nbsp;digital marketing</div>
+        <div class="tags"><i class="fas fa-gamepad"></i>&nbsp;&nbsp;<div>game</div> <div>development</div></div>
+        <div class="tags"><i class="fas fa-robot"></i>&nbsp;&nbsp;<div>machine</div> <div>learning</div></div>
+        <div class="tags"><i class="fas fa-chart-pie"></i>&nbsp;&nbsp;<div>digital</div> <div>marketing</div></div>
         <div class="tags"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-bar-chart-fill" viewBox="0 0 16 16" style="transform: scale(1.2);">
           <path d="M1 11a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v3a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1v-3zm5-4a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v7a1 1 0 0 1-1 1H7a1 1 0 0 1-1-1V7zm5-5a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1h-2a1 1 0 0 1-1-1V2z"/>
-        </svg>&nbsp;&nbsp;analytics</div> 
+        </svg>&nbsp;&nbsp;analytics</div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
         
       </div>
 
